# ar4_mk_5_ws

./: Dockerfile  TEENSY_COMMANDS_REFERENCE.md  bashrc  check_stl.py  entrypoint.sh  test_icp_logic.py  test_log  test_normals.py
src/ar4_arm_servo_control/: package.xml  setup.cfg  setup.py
src/ar4_arm_servo_control/config/: servo-z.yaml  servo.yaml  servo_init.yaml
src/ar4_arm_servo_control/launch/: demo_servo.launch.py
src/ar4_common/: CMakeLists.txt  package.xml
src/ar4_common/launch/: main.launch.py
src/ar4_description/: CMakeLists.txt  package.xml
src/ar4_description/config/: link_properties.yaml
src/ar4_description/docs/: UPDATE_MESHES.md
src/ar4_description/launch/: display.launch.py
src/ar4_description/meshes/: ar4.blend  arm_holder.stl  base_link.stl  base_link_motor.stl  cylinder.stl  cylinder_slide.stl  deep_camera.stl  deep_camera_holder.stl  gripper.stl  gripper_joint.stl  link_1.stl  link_1_motor.stl  link_2.stl  link_3_motor.stl  link_4.stl
src/ar4_description/rviz/: display.rviz
src/ar4_description/urdf/: ar4.urdf.xacro  ar4_in_world.urdf.xacro
src/ar4_description/urdf/include/: common_macros.urdf.xacro  materials.xacro
src/ar4_gazebo_bringup/: CMakeLists.txt  README.md  package.xml
src/ar4_gazebo_bringup/launch/: main.launch.py
src/ar4_gazebo_sim/: CMakeLists.txt  package.xml
src/ar4_gazebo_sim/config/: bridge.yaml  moveit.rviz
src/ar4_gazebo_sim/launch/: main.launch.py
src/ar4_gazebo_sim/urdf/: gz_ar4.urdf.xacro
src/ar4_gazebo_sim/urdf/includes/: ar4.ros2_control.xacro  gazebo.xacro
src/ar4_gazebo_sim/worlds/: empty.sdf
src/ar4_hardware_interface/: CMakeLists.txt  README.md  hardware_interface_plugin.xml  package.xml
src/ar4_hardware_interface/config/joint_offsets/: ar4.yaml
src/ar4_hardware_interface/fireware/: AR4_teensy41_sketch.ino
src/ar4_hardware_interface/include/ar4_hardware_interface/: ar4_hardware_interface.hpp  ar4_servo_gripper_hw_interface.hpp  ar4_switch_gripper_interface.hpp  arduino_nano_driver.hpp  teensy_driver.hpp
src/ar4_hardware_interface/launch/: main.launch.py
src/ar4_hardware_interface/src/: ar4_hardware_interface.cpp  ar4_servo_gripper_hw_interface.cpp  ar4_switch_gripper_interface.cpp  arduino_nano_driver.cpp  run_arduino_nano.cpp  teensy_driver.cpp
src/ar4_hardware_interface/urdf/: ar4.ros2_control_hardware.xacro  ar4.urdf.xacro  ar4_gripper.ros2_control_hardware.xacro
src/ar4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ar4_moveit_config/config/: ar4.ros2_control.xacro  ar4.srdf  ar4.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/ar4_moveit_config/launch/: my_moveit.launch.py
src/ar4_moveit_servo/: CMakeLists.txt  package.xml
src/ar4_moveit_servo/config/: servo.yaml
src/ar4_moveit_servo/launch/: ar4_servo.launch.py
src/ar4_moveit_servo/src/: arm_to_shelf_moveit_servo.cpp
src/ar4_mujoco_bringup/: CMakeLists.txt  README.md  package.xml
src/ar4_mujoco_bringup/launch/: main.launch.py
src/ar4_mujoco_sim/: CMakeLists.txt  package.xml
src/ar4_mujoco_sim/launch/: main.launch.py
src/ar4_mujoco_sim/meta/: metadata.json
src/ar4_mujoco_sim/mjcf/: scene.xml
src/ar4_mujoco_sim/mjcf/robot/: mj_ar4.mjcf
src/ar4_mujoco_sim/mjcf/robot/meshes/: link_2_cover.stl  link_3.stl  link_4_motor.stl  link_5_motor.stl
src/ar4_mujoco_sim/scripts/: stage1_create_urdf_from_xacro.sh  stage2_create_mjcf_from_urdf.sh
src/ar4_mujoco_sim/scripts/docker/: Dockerfile  entrypoint.sh  process_urdf.sh  requirements.txt
src/ar4_mujoco_sim/urdf/: mj_ar4.urdf
src/ar4_mujoco_sim/urdf/meshes/: base_link_bottom.stl  link_2_cover_logo.stl  link_2_motor.stl  link_3_misc.stl  link_5.stl
src/ar4_mujoco_sim/xacro/: mj_ar4.urdf.xacro
src/ar4_mujoco_sim/xacro/includes/: mujoco.xacro  ros2_control.xacro
src/ar4_realbot_bringup/: CMakeLists.txt  LICENSE  README.md  package.xml
src/ar4_realbot_bringup/launch/: main.launch.py
src/arm_to_shelf_control/: CMakeLists.txt  package.xml
src/arm_to_shelf_control/config/: servo.yaml
src/arm_to_shelf_control/launch/: ar4_servo.launch.py  main.launch.py  main_arm_to_shelf.launch.py  main_get_wheel.launch.py
src/arm_to_shelf_control/scripts/: arm_move_to_shelf_service.py  demo_coord_service.py
src/arm_to_shelf_control/src/: arm_to_shelf_control.cpp  demo_shelf_moveit.cpp  get_wheel.cpp  moveit_servo_service.cpp  moveit_servo_serviceasdfg.cpp
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/launch/: hello_moveit.launch.py
src/hello_moveit/src/: hello_moveit.cpp
src/vision_interfaces/: CMakeLists.txt  package.xml
src/vision_interfaces/srv/: Armcoodinate.srv  ShelfCoodinate.srv  TwistMoveitServo.srv
src/vision_yolo_depth/: package.xml  setup.cfg  setup.py
src/vision_yolo_depth/model/: Assembly.stl  wheel-holder-no.stl  wheel-holder-noss.stl  wheel-holder.stl  wheel-holder.stp  wheel-holders.stl
src/vision_yolo_depth/vision_yolo_depth/: demo_shelf_pose_detect.py  shelf_pose_detect_service.py  vision.py
